Change Log: initial commit Enrolement des utilisateurs Liste des membre enrolé [ok]; Consultation des informations [ok]

--- a/src/main/webapp/WEB-INF/components/topbar.xhtml
+++ b/src/main/webapp/WEB-INF/components/topbar.xhtml
@@ -74,7 +74,7 @@
                 <a href="#" class="layout-topbar-icon first">
                     <i class="topbar-icon fa fa-search"></i>
                 </a>
-                <input type="text" placeholder="Chercher un profil..." />
+                <p:inputText placeholder="Chercher un profil" style="width: 90%;"/>
             </li>
             <li class="user-profile" role="menuitem">
                 <a href="#">
