--- a/src/main/webapp/WEB-INF/components/template.xhtml
+++ b/src/main/webapp/WEB-INF/components/template.xhtml
@@ -46,6 +46,7 @@
        
         <h:outputStylesheet name="css/primeflex.css" library="prestige-layout" />
         <h:outputStylesheet name="css/#{guestPreferences.layout}.css" library="prestige-layout" />
+        <h:outputStylesheet name="css/main.css" library="prestige-layout" />
     </h:body>
 
 </html>
